agnes/oidc-sinatra.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: "oidc-sinatra"
  labels:
    name: "oidc-sinatra"
