agnes/patch-oidc-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oidc-sinatra
  annotations:
    external-dns.alpha.kubernetes.io/hostname: agnes-oidc-sinatra.agnesloadtest.identitysandbox.gov
spec:
  tls:
    - hosts:
        - agnes-oidc-sinatra.agnesloadtest.identitysandbox.gov
